Intermediate commit.